k8s/base/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
        tier: backend
        track: stable
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        volumeMounts:
        - name: radarr-persistent-storage
          mountPath: /config
          subPath: radarr/config
        - name: radarr-persistent-storage
          mountPath: /movies
          subPath: movies/
        - name: radarr-persistent-storage
          mountPath: /downloads
          subPath: downloads/
      volumes:
      - name: radarr-persistent-storage
        persistentVolumeClaim:
          claimName: home-server-pvc
