k8s/base/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    app: radarr
    tier: backend
  ports:
  - protocol: TCP
    port: 7878
